# src/swagger.json
@@ -389,6 +389,39 @@
 					}
 				}
 			}
+		},
+		"/student/": {
+			"get": {
+				"summary": "Retrieve student profile",
+				"tags": [
+					"Student"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"requestBody": {},
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"data": {
+											"$ref": "#/components/schemas/User"
+										}
+									},
+									"required": [
+										"data"
+									]
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"components": {
